crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_invalid_type_annotation.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_invalid_type_annotation),\n    functions::parse_stmt, \"let x: y + z\")"

---
error: unexpected token while parsing variable declaration
  ┌─ stmt_vardecl_invalid_type_annotation:1:10
  │
1 │ let x: y + z
  │          ^ unexpected token
  │
  = expected a newline; found symbol `+` instead


